[project]
name = "akgentic-tool"
version = "1.2.1"
description = "Tool interface and factory for Akgentic agent systems"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "gpiroux", email = "geoffroy.piroux@weareyuma.com" }
]
keywords = ["agents", "ai", "akgentic"]

dependencies = [
    "akgentic-core",
    "pydantic>=2.0.0",
    "tavily-python>=0.7.12",
    "pydantic-ai>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
vector_search = [
    "openai>=1.0.0",
    "numpy>=1.26.0",
]
weaviate = ["weaviate-client>=4.9.0"]
docs = ["markitdown[pdf,docx,xlsx,xls,pptx,outlook]>=0.1"]
vision = ["Pillow>=10.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "openai>=1.0.0",
    "numpy>=1.26.0",
]

# Note: akgentic-* dependencies have NO [tool.uv.sources] entry here.
# - Inside the akgentic-quick-start workspace, the workspace root's
#   [tool.uv.sources] resolves them as editable workspace members.
# - In standalone CI, they are built from RELEASE_BRANCH into a local
#   wheelhouse and installed via `uv pip install --find-links` — see ci.yml.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akgentic"]

# Tool configurations inherit from root workspace pyproject.toml
# Only override when package-specific behavior is needed

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Pre-existing type errors — exempted to keep CI green. New files in these
# modules must pass strict mypy before the override is removed. Previously this
# lived only in the akgentic-quick-start workspace root; moved here so the
# package's own CI (which no longer checks out the workspace) sees it.
[[tool.mypy.overrides]]
module = [
    "akgentic.tool.core",
    "akgentic.tool.event",
    "akgentic.tool.team.team",
    "akgentic.tool.planning.planning",
    "akgentic.tool.planning.planning_actor",
    "akgentic.tool.knowledge_graph.kg_tool",
    "akgentic.tool.search.search",
    "akgentic.tool.mcp.mcp",
    "akgentic.tool.sandbox.actor",
    "akgentic.tool.workspace.readers",
]
ignore_errors = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
